# cockroach

./: .bazelrc  BUILD.bazel  DEPS.bzl  Makefile  WORKSPACE  addConstraints_dead_code_issue.md  anithesis_exclusions.txt  dev  go.mod  go.sum  not_null_txn_bug.md  repro_not_null_bug.sql  uninstrumented_files.txt
.claude/: settings.local.json
.github/workflows/: code-cover-publish.yaml  local_roachtests.yml
githooks/: prepare-commit-msg
pkg/: BUILD.bazel
pkg/acceptance/: BUILD.bazel  test_acceptance.go  test_main.go  util_cluster.go  util_docker.go
pkg/base/: BUILD.bazel  addr_validation.go  cluster_id.go  config.go  license.go  node_id.go  store_spec.go  test_server_args.go  testclusterreplicationmode_string.go  zone.go
pkg/bench/: BUILD.bazel  foreachdb.go  query.go  setup.go
pkg/blobs/: BUILD.bazel  client.go  local_storage.go  service.go  stream.go  testutils.go
pkg/ccl/: BUILD.bazel
pkg/ccl/sqlproxyccl/idle/: BUILD.bazel  monitor.go  monitor_conn.go
pkg/cli/: BUILD.bazel  absolute_fs.go  auth.go  cert.go  cli.go  client_url.go  connect.go  connect_join.go  context.go  convert_url.go  cpuprofile.go  debug.go  debug_check_store.go  debug_job_trace.go  debug_list_files.go  debug_logconfig.go  debug_merge_logs.go  debug_recover_loss_of_quorum.go  debug_reset_quorum.go  debug_send_kv_batch.go  debug_synctest.go  decode.go  demo.go  demo_telemetry.go  doctor.go  examples.go  flags.go  flags_util.go  gen.go  haproxy.go  import.go  init.go  initial_sql.go  keytype_string.go  log_flags.go  mt_cert.go  mt_proxy.go  mt_start_sql.go  mt_test_directory.go  node.go  (+21 more)
pkg/cloud/: BUILD.bazel  cloud_io.go  external_storage.go  impl_registry.go  kms.go  kms_test_utils.go  uris.go
pkg/clusterversion/: BUILD.bazel  clusterversion.go  cockroach_versions.go  key_string.go  keyed_versions.go  setting.go
pkg/cmd/cockroach/: BUILD.bazel  main.go
pkg/cmd/github-pull-request-make/: BUILD.bazel  main.go
pkg/cmd/label-merged-pr/: BUILD.bazel  main.go
pkg/cmd/publish-provisional-artifacts/: BUILD.bazel  main.go
pkg/cmd/testfilter/: BUILD.bazel  main.go
pkg/cmd/urlcheck/: BUILD.bazel  main.go
pkg/cmd/urlcheck/lib/urlcheck/: BUILD.bazel  urlcheck.go
pkg/compose/: BUILD.bazel
pkg/config/: BUILD.bazel  keys.go  provider.go  system.go  system_mask.go  testutil.go
pkg/docs/: BUILD.bazel  docs.go
pkg/featureflag/: BUILD.bazel  feature_flags.go
pkg/geo/: BUILD.bazel  bbox.go  encode.go  errors.go  geo.go  hilbert.go  iterator.go  latlng.go  parse.go  polyline.go  summary.go
pkg/gossip/: BUILD.bazel  client.go  gossip.go  info.go  infostore.go  keys.go  node_set.go  server.go  status.go  util.go
pkg/jobs/: BUILD.bazel  adopt.go  config.go  errors.go  executor_impl.go  helpers.go  job_scheduler.go  jobs.go  metrics.go  progress.go  registry.go  schedule_metrics.go  scheduled_job.go  scheduled_job_executor.go  test_helpers.go  testing_knobs.go  update.go  utils.go  validate.go  wait.go
pkg/keys/: BUILD.bazel  commenttype_string.go  constants.go  errors.go  keys.go  printer.go  sql.go
pkg/keysbase/: BUILD.bazel  data.go
pkg/kv/: BUILD.bazel  batch.go  db.go  mock_transactional_sender.go  range_lookup.go  sender.go  test_utils.go  txn.go  util.go
pkg/kv/kvnemesis/streamingvalidator/: BUILD.bazel  doc.go  observation.go  validator.go  validator_test.go  violation.go
pkg/kv/kvserver/closedts/: BUILD.bazel  policy.go
pkg/kv/kvserver/closedts/ctpb/: BUILD.bazel  service.go
pkg/kv/kvserver/closedts/sidetransport/: BUILD.bazel  cantclosereason_string.go  debug.go  receiver.go  sender.go
pkg/kv/kvserver/closedts/tracker/: BUILD.bazel  heap_tracker.go  lockfree_tracker.go
pkg/migration/: BUILD.bazel  helpers.go  migration.go  system_migration.go  tenant_migration.go  testing_knobs.go
pkg/multitenant/: BUILD.bazel  cost_controller.go
pkg/release/: BUILD.bazel  release.go
pkg/roachpb/: BUILD.bazel  ambiguous_result_error.go  api.go  app_stats.go  batch.go  batch_generated.go  data.go  errordetailtype_string.go  errors.go  index_usage_stats.go  internal.go  merge_spans.go  metadata.go  metadata_replicas.go  method.go  method_string.go  replica_unavailable_error.go  span_config.go  span_group.go  tenant.go  version.go
pkg/roachprod/: BUILD.bazel  clusters_cache.go  multitenant.go  roachprod.go
pkg/roachprod/ssh/: BUILD.bazel  io.go  shell.go
pkg/roachprod/vm/ovh/: BUILD.bazel  provider.go  provider_flags.go  startup.go
pkg/rpc/: BUILD.bazel  addjoin.go  auth.go  auth_tenant.go  breaker.go  clock_offset.go  codec.go  connection_class.go  context.go  context_testutils.go  heartbeat.go  metrics.go  pg.go  snappy.go  stats_handler.go  tls.go
pkg/scheduledjobs/: BUILD.bazel  env.go
pkg/security/: BUILD.bazel  auth.go  auto_tls_init.go  certificate_loader.go  certificate_manager.go  certs.go  join_token.go  ocsp.go  password.go  pem.go  permission_check.go  tls.go  tls_settings.go  username.go  utils.go  x509.go
pkg/server/: BUILD.bazel  addjoin.go  admin.go  api_v2.go  api_v2_auth.go  api_v2_error.go  api_v2_ranges.go  api_v2_sql_schema.go  authentication.go  auto_tls_init.go  auto_upgrade.go  clock_monotonicity.go  combined_statement_stats.go  config.go  config_unix.go  config_windows.go  decommission.go  drain.go  env_sampler.go  external_storage_builder.go  grpc_gateway.go  grpc_server.go  gzip_response_writer.go  import_ts.go  index_usage_stats.go  init.go  init_handshake.go  listen_and_update_addrs.go  load_endpoint.go  loopback.go  loss_of_quorum.go  migration.go  node.go  node_http_router.go  node_tenant.go  node_tombstone_storage.go  pagination.go  problem_ranges.go  purge_auth_session.go  rlimit_bsd.go  (+23 more)
pkg/settings/: BUILD.bazel  bool.go  byte_size.go  common.go  enum.go  (+11 more)
pkg/sql/enum/: BUILD.bazel  enum.go
pkg/sql/scanner/: BUILD.bazel  scan.go
pkg/testutils/lint/passes/errcover/: BUILD.bazel  errcover.go
pkg/testutils/lint/passes/errscan/: BUILD.bazel  errscan.go
pkg/util/drwmutex/: BUILD.bazel  cpus_linux.go  drwmutex.go
pkg/workload/faker/: BUILD.bazel  address.go  dict.go  faker.go  lorem.go  name.go
scripts/: pprof-loop.sh
(+2895 files in other folders)
