load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cockroach_lib",
    srcs = ["main.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/cockroach",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/ccl",
        "//pkg/ccl/cliccl",
        "//pkg/cli",
        "//pkg/ui/distccl",
        "@com_antithesis_instrumentation//wrappers",
    ],
)

go_binary(
    name = "cockroach",
    embed = [":cockroach_lib"],
    visibility = ["//visibility:public"],
    deps = ["@com_antithesis_instrumentation//wrappers"],
    #cdeps = [":libvoidstar"],
    #cgo = True
)

#cc_import(
#	name = "libvoidstar",
#        shared_library = "foobar/libvoidstar.so",
#)
