load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "github-pull-request-make_lib",
    srcs = ["main.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/github-pull-request-make",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/build/bazel",
        "//pkg/testutils/buildutil",
        "@com_antithesis_instrumentation//wrappers",
        "@com_github_google_go_github//github",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

go_binary(
    name = "github-pull-request-make",
    embed = [":github-pull-request-make_lib"],
    visibility = ["//visibility:public"],
    deps = ["@com_antithesis_instrumentation//wrappers"],
)

go_test(
    name = "github-pull-request-make_test",
    size = "small",
    srcs = ["main_test.go"],
    data = glob(["testdata/**"]),
    embed = [":github-pull-request-make_lib"],
    deps = [
        "//pkg/testutils",
        "//pkg/testutils/skip",
        "@com_antithesis_instrumentation//wrappers",
        "@com_github_kr_pretty//:pretty",
    ],
)
