load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "label-merged-pr_lib",
    srcs = ["main.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/label-merged-pr",
    visibility = ["//visibility:private"],
    deps = ["@com_antithesis_instrumentation//wrappers"],
)

go_binary(
    name = "label-merged-pr",
    embed = [":label-merged-pr_lib"],
    visibility = ["//visibility:public"],
    deps = ["@com_antithesis_instrumentation//wrappers"],
)

go_test(
    name = "label-merged-pr_test",
    srcs = ["main_test.go"],
    embed = [":label-merged-pr_lib"],
    deps = [
        "//pkg/testutils/skip",
        "@com_antithesis_instrumentation//wrappers",
        "@com_github_stretchr_testify//assert",
    ],
)
