load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "publish-provisional-artifacts_lib",
    srcs = ["main.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/publish-provisional-artifacts",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/release",
        "//pkg/util/version",
        "@com_antithesis_instrumentation//wrappers",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/s3",
        "@com_github_kr_pretty//:pretty",
    ],
)

go_binary(
    name = "publish-provisional-artifacts",
    embed = [":publish-provisional-artifacts_lib"],
    visibility = ["//visibility:public"],
    deps = ["@com_antithesis_instrumentation//wrappers"],
)

go_test(
    name = "publish-provisional-artifacts_test",
    size = "small",
    srcs = ["main_test.go"],
    embed = [":publish-provisional-artifacts_lib"],
    deps = [
        "//pkg/release",
        "//pkg/testutils",
        "@com_antithesis_instrumentation//wrappers",
        "@com_github_alessio_shellescape//:shellescape",
        "@com_github_aws_aws_sdk_go//service/s3",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_stretchr_testify//require",
    ],
)
