load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "urlcheck_lib",
    srcs = ["main.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/urlcheck",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd/urlcheck/lib/urlcheck",
        "@com_antithesis_instrumentation//wrappers",
    ],
)

go_binary(
    name = "urlcheck",
    embed = [":urlcheck_lib"],
    visibility = ["//visibility:public"],
    deps = ["@com_antithesis_instrumentation//wrappers"],
)
