load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ssh",
    srcs = [
        "io.go",
        "shell.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/roachprod/ssh",
    visibility = ["//visibility:public"],
    deps = ["@com_antithesis_instrumentation//wrappers"],
)

go_test(
    name = "ssh_test",
    srcs = ["io_test.go"],
    embed = [":ssh"],
    deps = ["@com_antithesis_instrumentation//wrappers"],
)
