load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "enum",
    srcs = ["enum.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/enum",
    visibility = ["//visibility:public"],
    deps = ["@com_antithesis_instrumentation//wrappers"],
)

go_test(
    name = "enum_test",
    size = "small",
    srcs = ["enum_test.go"],
    embed = [":enum"],
    deps = [
        "//pkg/util/leaktest",
        "//pkg/util/randutil",
        "@com_antithesis_instrumentation//wrappers",
        "@com_github_stretchr_testify//require",
    ],
)
