load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "scanner",
    srcs = ["scan.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/scanner",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/sql/lexbase",
        "@com_antithesis_instrumentation//wrappers",
    ],
)

go_test(
    name = "scanner_test",
    srcs = ["scan_test.go"],
    embed = [":scanner"],
    deps = [
        "//pkg/sql/lexbase",
        "@com_antithesis_instrumentation//wrappers",
        "@com_github_stretchr_testify//require",
    ],
)
