load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "closedts",
    srcs = [
        "policy.go",
        "setting.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/kv/kvserver/closedts",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/roachpb",
        "//pkg/settings",
        "//pkg/util/hlc",
        "@com_antithesis_instrumentation//wrappers",
    ],
)

go_test(
    name = "closedts_test",
    srcs = ["policy_test.go"],
    embed = [":closedts"],
    deps = [
        "//pkg/roachpb",
        "//pkg/util/hlc",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "@com_antithesis_instrumentation//wrappers",
        "@com_github_stretchr_testify//require",
    ],
)
