load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "errcover",
    srcs = ["errcover.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/testutils/lint/passes/errcover",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/testutils/lint/passes/passesutil",
        "//pkg/util/metamorphic",
	"//pkg/util/intsets",
        "@org_golang_x_tools//go/analysis",
        "@org_golang_x_tools//go/analysis/passes/inspect",
        "@org_golang_x_tools//go/ast/astutil",
        "@org_golang_x_tools//go/ast/inspector",
        "@org_golang_x_tools//go/types/typeutil",
    ],
)
