load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "errscan",
    srcs = ["errscan.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/testutils/lint/passes/errscan",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_tools//go/analysis",
        "@org_golang_x_tools//go/analysis/unitchecker",
    ],
)
